# s2spice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SObject.cpp  SObject.h  appveyor.bat  appveyor.yml  get_wxWidgets.bat  github-windeps.bat  github_build.bat  main.cpp  matrix.cpp  matrix.h  s2spice.cpp  s2spice.rc  s2spicec.c  setup_wxWidgets.bat  stringformat.hpp  test_win.bat  version.h  version.h.in  xqsmatrix.h
.github/workflows/: linux-build.yaml  mac-build.yaml  windows.yaml
Test/: AD6PS-1+___+25.S7P  AD6PS-1+___+25.TS  AD6PS-1+___+25err.TS  AD6PS-1+___+85.S7P  AD6PS-1+___-40.S7P  AMP-75+_Unit1.s2p  AMP-75+_Unit2.s2p  BBP-20R5+_Minu40degC.s2p  BBP-20R5+_Plus25degC.s2p  BBP-20R5+_Plus25degC.ts  BBP-20R5+_Plus85degC.s2p  test.asc  test.plt
cmake/: CpackConfig.cmake
setup/: setup.vdproj
